# kommpot

./: .clang-format  .gitignore  BuildOptions.cmake  CHANGELOG.md  CMakeLists.txt  ConvenienceDefinitions.cmake  IncrementProjectVersion.py  ProjectVersion.cmake  README.md  ThirdPartyFetch.cmake  build_options.h.in  kommpot.cppcheck
.github/: dependabot.yml
.github/workflows/: cmake-build-only.yml  cmake-build-release.yml  cmake-multi-platform-build.yml
libkommpot/: CMakeLists.txt
libkommpot-test-app/: CMakeLists.txt  main.cpp
libkommpot/include/: export_definitions.h  libkommpot.h
libkommpot/sources/: communication_ethernet.cpp  communication_ethernet.h  communication_libftdi.cpp  communication_libftdi.h  communication_libusb.cpp  communication_libusb.h  ethernet_address.cpp  ethernet_address.h  ethernet_address_factory.cpp  ethernet_address_factory.h  ethernet_context.cpp  ethernet_socket.cpp  ethernet_socket.h  ethernet_tools.cpp  kommpot_core.cpp  kommpot_core.h  kommpot_initializer.cpp  kommpot_initializer.h  libkommpot.cpp
libkommpot/sources/communications/ethernet/: communication_ethernet.cpp  communication_ethernet.h  ethernet_address.cpp  ethernet_address.h  ethernet_address_factory.cpp  ethernet_address_factory.h  ethernet_context.cpp  ethernet_context.h  ethernet_socket.cpp  ethernet_socket.h  ethernet_tools.cpp  ethernet_tools.h
libkommpot/sources/communications/http/: communication_http.cpp  communication_http.h
libkommpot/sources/communications/libftdi/: communication_libftdi.h
libkommpot/sources/communications/libusb/: communication_libusb.cpp
tests/: CMakeLists.txt  main.cpp  test_api.cpp  test_general.cpp  test_libusb.cpp
udev-rules/: 100-kommpot.rules  install-udev-rules.sh
